# Utils

./: CMakeLists.txt  README.md  Utils.cpp  Utils.h  UtilsConfig.cmake  main.cpp
test/: CLTest.cpp  CMakeLists.txt  config.txt  testStr.cpp
